# Intent-Shell

./: .flake8  ARCHITECTURE.md  CHANGELOG.md  CLIPBOARD_FEATURE.md  PRODUCTION_GUIDE.md  QUICKSTART.md  README.md  README_AI.md  TRADINGVIEW_FEATURE.md  pyproject.toml  requirements-dev.txt  test_clipboard_integration.sh
examples/: clipboard_demo.py
intellishell/: __init__.py  ai_bridge.py  cli.py  doctor.py  executor.py  main.py  memory.py  parser.py  parser_rust.py  planner.py  safety.py  session.py  validation.py
intellishell/providers/: __init__.py  app.py  base.py  clipboard_provider.py  doctor_provider.py  filesystem.py  memory_provider.py  polymarket_provider.py  registry.py  system_monitor.py  system_provider.py  watch_provider.py  yfinance_provider.py
intellishell/utils/: __init__.py  clipboard.py  completion.py  display.py  logging.py  notifications.py  terminal.py  transaction_log.py
intent_shell/: __init__.py  ai_bridge.py  cli.py  doctor.py  executor.py  main.py  memory.py  parser.py  planner.py  safety.py
intent_shell/providers/: __init__.py  app.py  base.py  doctor_provider.py  filesystem.py  memory_provider.py  registry.py  system_monitor.py  system_provider.py  watch_provider.py
intent_shell/utils/: __init__.py  clipboard.py  logging.py  notifications.py  terminal.py  transaction_log.py
parser_core/: Cargo.toml  README.md
parser_core/src/: entities.rs  lib.rs  matcher.rs  py.rs  similarity.rs  types.rs
tests/: __init__.py  test_ambiguity.py  test_clipboard_history.py  test_parser.py  test_providers.py  test_session.py  test_transaction_log.py
