[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intellishell"
version = "0.1.0"
description = "IntelliShell - Windows-first semantic command shell with AI reasoning and vector memory"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "IntelliShell Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0.0",
    "requests>=2.28.0",
    "prompt-toolkit>=3.0.0",
]

[project.optional-dependencies]
full = [
    "psutil>=5.9.0",
    "pyperclip>=1.8.0",
    "rich>=13.0.0",
    "watchdog>=3.0.0",
    "plyer>=2.1.0",
    "win10toast>=0.9",
    "chromadb>=0.4.0",
]
ai = [
    "pydantic>=2.0.0",
    "requests>=2.28.0",
]
memory = [
    "chromadb>=0.4.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[project.scripts]
ishell = "intellishell.cli:main"
intellishell = "intellishell.cli:main"

[tool.setuptools.packages.find]
include = ["intellishell*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
