[package]
name = "parser-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "parser_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
ahash = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
